--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,19 @@ authors = ["das-dias <das.dias6@gmail.com>"]
 
 
 [tool.poetry.dependencies]
+#python
 python = "^3.9"
 
+#external libs
+loguru = "^0.6.0" # logging library for python
+networkx = "^2.7.1" # graph library for python
+gdspy = "^1.6.11" # gdsii ic layout information visualization and parsing"
+
+# local libs
+#deflef = {git = "https://github.com/das-dias/deflef_py"} 
+
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "^5.2" # unit testing framework for python
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
