--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [tool.poetry]
-name = "speedster_py"
+name = "speedsterpy"
 version = "0.1.2"
+license = "BSD-3-Clause"
 description = "Speedster - A 3D point to point parasitic resistance extraction tool for Integrated Circuits"
-authors = ["das-dias <das.dias6@gmail.com>"]
-
+authors = ["Diogo Andre <das.dias6@gmail.com>"]
+repository = "https://github.com/das-dias/speedsterpy"
 
 [tool.poetry.dependencies]
 #python
@@ -12,10 +13,10 @@ python = "^3.9"
 #external libs
 loguru = "^0.6.0" # logging library for python
 networkx = "^2.7.1" # graph library for python
-gdspy = "^1.6.11" # gdsii ic layout information visualization and parsing"
-
-# local libs
-#deflef = {git = "https://github.com/das-dias/deflef_py"} 
+gdspy = "^1.6.11" # gdsii ic layout information visualization and parsing" 
+#native libs
+deflefpy = "^0.1.3"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2" # unit testing framework for python
