--- a/spdstrnet/pyproject.toml
+++ b/spdstrnet/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["dasdias <das.dias6@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.22.3"
-gdspy = "^1.6.11"
 loguru = "^0.6.0"
+gdstk = "^0.8.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
